Fix unescaped apostrophe issue

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "npm run build && gh-pages -d out"
   },
+  
   "dependencies": {
     "@fontsource/inter": "^5.2.7",
     "@fontsource/manrope": "^5.2.7",
