--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && cp -r public/* out/ || true",
     "export": "next export",
     "start": "next start",
     "lint": "eslint",
     "deploy": "npm run build && gh-pages -d out"
   },
-  
   "dependencies": {
     "@fontsource/inter": "^5.2.7",
     "@fontsource/manrope": "^5.2.7",
